cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_109.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cfb64.c:42: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cfb64.c:42:17: Write of unused value
40.                   l2n(t, iv);
41.                   t = ti[1];
42.                   l2n(t, iv);
                      ^
43.                   iv = (unsigned char *)ivec;
44.               }
